poc-notes-takahe
11/29/2022 - 5:30 (UTC -7)

Starting install

OS: FreeBSD 13.1-RELEASE

PKGs to install (as tested):
-py39-dj-database-url-1.0.0
-py39-django41-4.1.2
-py39-sentry-sdk-1.5.12
-py39-pydantic-1.10.2
-postgresql14-server-14.5
-postgresql14-client-14.5
-"allow.sysvipc=1" in jail properties to run Postgresql
-py39-pip-22.2.2
-pip install pydantic[email]
-pip install django-htmx
-pip install pyld
-libxslt (PKG)
-pip install psycopg2

***Additional Notes***
-all pip commands were run as a "regular" user in the wheel group. Pip was installed
via PKG as well as django.
-all packages installed via PKG and pip were pulled from requirements.txt

***Code Added***
settings.py - line 94:
added host (jail) IP for PGHOST
settings.py - line 100:
"allow_reuse=True"


All the above modules (pip) and packages (pkg) installed as expected. However,
when starting the application with the following command:

john@bsdlabs-takahe:~ $ python3.9 manage.py runserver 192.168.254.108:8080
Exception in thread django-main-thread:
Traceback (most recent call last):
  File "/usr/local/lib/python3.9/threading.py", line 980, in _bootstrap_inner
    self.run()
  File "/usr/local/lib/python3.9/threading.py", line 917, in run
    self._target(*self._args, **self._kwargs)
  File "/usr/local/lib/python3.9/site-packages/django/utils/autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
  File "/usr/local/lib/python3.9/site-packages/django/core/management/commands/runserver.py", line 125, in inner_run
    autoreload.raise_last_exception()
  File "/usr/local/lib/python3.9/site-packages/django/utils/autoreload.py", line 87, in raise_last_exception
    raise _exception[1]
  File "/usr/local/lib/python3.9/site-packages/django/core/management/__init__.py", line 398, in execute
    autoreload.check_errors(django.setup)()
  File "/usr/local/lib/python3.9/site-packages/django/utils/autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
  File "/usr/local/lib/python3.9/site-packages/django/__init__.py", line 24, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/usr/local/lib/python3.9/site-packages/django/apps/registry.py", line 116, in populate
    app_config.import_models()
  File "/usr/local/lib/python3.9/site-packages/django/apps/config.py", line 269, in import_models
    self.models_module = import_module(models_module_name)
  File "/usr/local/lib/python3.9/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 850, in exec_module
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/usr/home/john/activities/models/__init__.py", line 1, in <module>
    from .fan_out import FanOut, FanOutStates  # noqa
  File "/usr/home/john/activities/models/fan_out.py", line 23
    match (fan_out.type, fan_out.identity.local):
                                                 ^
SyntaxError: invalid syntax

Error could be the result of using Django 4.1.2/Python 3.9
Reinstalling with Python 3.10

11-30-2022 5:08pm (UTC -7)

OS: FreeBSD 13.1-RELEASE in an ezjail
*** Switching to ports because PKG does not show python 3.10

Ports installed:
-python310-3.10.8_1
***py-pip installs for python3.9 and I do not see a pip for python310***

